			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Bug#77, manual tools handling call/[2..].  Holger Kanwischer.

  * FIXED: Bug#76, deadlock in see/1 if the argument file does not exist.
    Holger Kanwischer.


VERSION 5.2.4 (Jul 17, 2003)
============================

  * FIXED: Bug#74, call_cleanup/3 handler not called if it must be autoloaded
    and is called due to an exception.  Mike Elston.

  * FIXED: Bug#73, GUI tracer using decompiled code where it shouldn't.
    Holger Kanwischer.

  * ENHANCED: More thread-allocation issues.  Avoid memory floating
    uncontrolled between threads through message exchange or other dynamic
    datastructures allocated by thread 1 and consumed by thread 2.
    Sergey Tikhonov.

  * FIXED: Pretty printing not proper lists in the GUI tracer.  David Reitter.

  * ADDED: Hooks into the profiler that allow for profiling external
    packages such as XPCE.

  * FIXED: Bug in profiler causing very large overhead under some
    circumstances.  Tolga Konik.

  * ENHANCED: thread memory pooling could waste memory, especially in
    designs where a pool of threads is fired, waited for, re-started,
    etc.  Sergey Tikhonov.

VERSION 5.2.3 (Jul 04, 2003)
============================

  * ENHANCED: make trace/0 work while skipping, so an explicit trace command
    always works.  Alan Baljeu.

  * FIXED: Bug#71: graphical tracer confused about (a,b),c nested inside
    an if-then-else.  Holger Kanwischer.

  * FIXED: call_cleanup/3 to call the handler on deterministic exit in
    debug mode.  Holger Kanwischer.

  * MODIFIED: hide predicates starting with $ from listing/0.  Paulo Moura.

  * FIXED: compiler warnings on initPrologThreads().  Paulo Moura.
